--- a/style.css
+++ b/style.css
@@ -43,15 +43,12 @@
 
 .index_books
 {
+    color: black;
     background-color: white;
     align-items: center;
     display: flex;
     justify-content: center;
     gap: 30px;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 10%;
-    margin-top: 10%;
 }
 
 .index_books img
