Update styles for various components and media queries

--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 .body
 {
     color: white;
-    background-color: white;
+    background-color: #eff2f4;
 }
 
 .navbar
 {
-    background-color: #0b2e33;
+    background-color: #1a1d27;
     font-family: Papyrus, fantasy;
     height: 10vh;
 }
 
-.container-fluid
-{
-    font-size: 1.4rem;
+@media (max-height: 500px) {
+    .navbar {
+        height: 50px;
+    }
 }
 
 .logo
@@ -25,102 +26,56 @@
 
 .presentation
 {
-    background-color: #4f7c82;
+    background-color: #242937;
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
-    place-items: center;
+    justify-content: center;
     height: 90vh;
+    overflow: hidden;
 }
 
-.presentation img
-{
-    width: 25%;
-    height: auto;
-    margin: 7%;
-}
 
 .presentation p
 {
-    width: 500px;
+    color: white;
+    position: absolute;
+    font-size: 20px;
+    max-width: 30vw;
 }
 
-.index_books
+@media (max-width: 600px) {
+    .presentation p {
+        font-size: 14px;
+        max-width: 100vh;
+    }
+}
+
+.carousel
 {
-    color: black;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
     height: 100vh;
 }
 
-.index_books img
+.carousel-inner
 {
-    border: solid 10px transparent;
-    opacity: 0.7;
-    height: 80vh;
-    
-}
-
-.index_books img:hover
-{
-    opacity: 1;
-}
-
-.index_books p
-{
-    font-size: 1.2rem;
-    width: 350px;
-}
-
-.games
-{
-    background-color: #0b2e33;
-    align-items: center;
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    opacity: 0.5;
+    display:flex;
     height: 100vh;
 }
 
-.games img
+.carousel-caption
 {
-    opacity: 0.7;
+    bottom: 40%;
 }
 
-.games img:hover
+.carousel-caption h5
 {
-    opacity: 1;
+    font-size: 50px;
 }
 
-.games p
+.carousel-item img
 {
-    font-size: 1.2rem;
-    opacity: 1;
-    width: 350px;
-}
-
-#books_title
-{
-    display: flex;
-    justify-content: center;
-}
-
-.books_grid
-{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 25px;
-}
-
-.book
-{
+    height: 100%;
     object-fit: cover;
-    border: 3px solid white;
-    height: 500px;
-    width: 400px;
-    flex: 0 0 400px
 }
