--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 .body
 {
     color: white;
-    background-color: #eff2f4;
+    background-color: #1a1d27
+}
+
+hr {
+  border: 0;
+  clear:both;
+  display:block;
+  width: 50%;               
+  background-color:#f6f6ed;
+  height: 1px;
 }
 
 .navbar
@@ -17,44 +26,47 @@
     }
 }
 
-.logo
-{
-    color: white !important;
-    font-size: 1.4rem;
-    text-decoration: none !important;
-}
-
 .presentation
 {
-    background-color: #242937;
     display: flex;
-    flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
     height: 90vh;
     overflow: hidden;
+    background-image: url("images/pixel-9104884_1920\ Image\ by\ Judas\ from\ Pixabay.jpg");
+    background-attachment: fixed;
+    background-size: cover;
 }
-
 
 .presentation p
 {
     color: white;
     position: absolute;
-    font-size: 20px;
-    max-width: 30vw;
+    font-family: Papyrus, fantasy;
+    font-size: 30px;
+    max-width: 50vw;
+    background-color: rgba(3, 2, 5, 0.508);;
+    border-radius: 10px;
+    animation: anim 20s infinite;
 }
+
+@keyframes anim {
+       20% { background-color: rgba(57, 43, 93, 0.5);}
+       40% { background-color: rgba(95, 47, 92, 0.51);}
+       80% { background-color: rgba(97, 51, 47, 0.503);}
+}
+
 
 @media (max-width: 600px) {
     .presentation p {
-        font-size: 14px;
+        font-size: 20px;
         max-width: 100vh;
     }
 }
 
 .carousel
 {
-    display: flex;
     height: 100vh;
 }
 
@@ -64,9 +76,10 @@
     height: 100vh;
 }
 
-.carousel-caption
+.carousel-item img
 {
-    bottom: 40%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .carousel-caption h5
@@ -74,8 +87,153 @@
     font-size: 50px;
 }
 
-.carousel-item img
+.godot_main
 {
+    background-image: url("images/ai-generated-9060608_1280.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    padding-bottom: 5%;
+}
+
+.godot_header
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 30vh !important;
+}
+
+@media (max-height: 500px){
+    .godot_header {
+        height: 40vh !important;
+    }
+}
+
+.godot_text
+{
+    background-color: rgba(3, 2, 5, 0.508);
+    display: inline-block;
+    padding: 5px;
+    border-radius: 10px;
+}
+
+
+.godot_content
+{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.godot_container
+{
+    display: flex;
+    gap: 30px;
+}
+
+.godot_container img
+{
+    height: 40vh;
+}
+
+@media (max-height: 500px) or (max-width: 900px) {
+    .godot_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .godot_container img
+    {
+        max-width: 350px;
+        max-height: 350px;
+        width: auto;
+        height: auto;
+    }
+}
+
+.assets_main
+{
+    background-image: url("images/ai-generated-9332704_1920\ Image\ by\ Marcin\ Brzózka\ from\ Pixabay.jpg");
+    background-position: center;
+    background-attachment: fixed;
+    text-align: center;
+}
+
+.assets_content
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.assets_content h5
+{
+    margin-top: 1vh;
+}
+
+.assets_content a
+{
+    margin-left: 3vh;
+    margin-right: 3vh;
+}
+
+@media screen and (max-width: 600px) {
+  .assets_div {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
+
+.open_image
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.game_main
+{
+    background-image: url("images/pixel-art-9332698_1920\ Image\ by\ Marcin\ Brzózka\ from\ Pixabay.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    padding-bottom: 5%;
+}
+
+.game_content
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.game_content video
+{
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+    padding-right: 5%;
+    padding-left: 5%;
+}
+
+.footer
+{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    text-align: center;
+    background-color: #1a1d27;
+    height: 15vh;
+}
+
+
+@media (max-height: 500px) {
+    .footer
+    {
+        height: 30vh;
+    }
 }
